...
import com.example.dookoff.ui.theme.MainColor3

@Composable
fun CatsMajorView(stateOfCats: MutableState<List<CatBreedDomain>>) {

    Column(
        modifier = Modifier.testTag("catsView")
    ) {
        var countryChosen by remember {
            mutableStateOf("")
        }
        val catsCountries = stateOfCats.value.map { it.country }.distinct().toList()
        LazyRow(
...
